# Aykut0

./: README.md  index.html  style.css
projects/ultrasonic-tag/: index.html
projects/ultrasonic-tag/data-transmission/: index.html
projects/ultrasonic-tag/data-transmission/code/: CMakeLists.txt  README.md  stm32_main.c  udp_receiver.py
projects/ultrasonic-tag/data-transmission/code/main/: CMakeLists.txt  main.c  udp_main.c
